# tree-sitter-opam

./: .gitattributes  .gitignore  CHANGELOG.md  Cargo.toml  IMPLEMENTATION.md  LICENSE  README.md  TEST_COVERAGE.md  binding.gyp  eslint.config.mjs  go.mod  grammar.js  package-lock.json  package.json  tree-sitter.json
.claude/: settings.local.json
.github/workflows/: ci.yml  fuzz.yml  lint.yml  release.yml
bindings/c/: tree-sitter-opam.h  tree-sitter-opam.pc.in
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_opam/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterOpamTests/: TreeSitterDuneTests.swift
queries/: highlights.scm  injections.scm  tags.scm
src/: grammar.json  node-types.json  parser.c  scanner.c
test/: TAGS_TESTING.md  example.opam  files.txt  tags-test.opam  test-tags.sh
test/corpus/: basic.txt  build_commands.txt  dependencies.txt  filters_and_availability.txt  metadata.txt  sections.txt  strings_and_special.txt
